--- a/README
+++ b/README
@@ -1,1 +1,30 @@
-Eva dreams a world, far away. 
+Sqlite-Commander
+================
+
+Sqlite-Commander is a project that is aimed to display sqlite databases in Terminal using a ncurses interface. Mono.NCurses is used as the CUI framework. The name is inspired from Midnight-Commander written by Miguel De Icaza.
+
+All the source code is available to you in LGPL v2 only.
+
+Drop me a word if you like the software.
+
+
+Features
+========
++ Shows the list of tables in the left pane
++ Shows the first 30 records for the selected table in the right pane
++ Non-printable columns are shown with a ???
++ Maximum of 30 characters are displayed per column. Column data exceeding this length are shown with "..."
+
+
+ToDo
+====
+There are few things which will be good to have. But I don't see a pressing need for these features for my workflow. So I have not implemented these. But patches are more than welcome.
+
+
+Hacking Sqlite-Commander
+=========================
+1) Install mono-devel packages, make
+2) Checkout MonoCurses package from Mono source code repositories: git clone https://github.com/mono/mono-curses.git
+3) ./configure --prefix=/usr ; sudo make install
+4) Checkout Sqlite-Commander sources from github: git clone https://github.com/curiosity/sqlite-commander.git
+5) make run
